@startuml

title __MYSQL's Class Diagram__\n

  package by.khomenko.training.finaltask05.dao {
    package by.khomenko.training.finaltask05.dao.mysql {
      abstract class BaseDaoImpl {
          # connection : Connection
          ~ BaseDaoImpl()
          + setConnection()
          + getConnection()
          + close()
      }
    }
  }
  

  package by.khomenko.training.finaltask05.dao {
    package by.khomenko.training.finaltask05.dao.mysql {
      class BlackListDaoImpl {
          {static} - LOGGER : Logger
          + BlackListDaoImpl()
          + create()
          + read()
          + update()
          + delete()
          + readAll()
          + count()
          + isUserInBlacklist()
      }
    }
  }
  

  package by.khomenko.training.finaltask05.dao {
    package by.khomenko.training.finaltask05.dao.mysql {
      class CategoryDaoImpl {
          {static} - LOGGER : Logger
          + CategoryDaoImpl()
          + create()
          + read()
          + update()
          + delete()
          + readAll()
          + count()
      }
    }
  }
  

  package by.khomenko.training.finaltask05.dao {
    package by.khomenko.training.finaltask05.dao.mysql {
      class FavoriteDaoImpl {
          {static} - LOGGER : Logger
          + FavoriteDaoImpl()
          + create()
          + read()
          + update()
          + delete()
          + read()
          + delete()
          + deleteAll()
      }
    }
  }
  

  package by.khomenko.training.finaltask05.dao {
    package by.khomenko.training.finaltask05.dao.mysql {
      class ImageDaoImpl {
          {static} - LOGGER : Logger
          + ImageDaoImpl()
          + create()
          + read()
          + update()
          + delete()
          + readAll()
          + readUserImages()
          + count()
          + countUserImages()
          + updateImageCategories()
      }
    }
  }
  

  package by.khomenko.training.finaltask05.dao {
    package by.khomenko.training.finaltask05.dao.mysql {
      class RecognizedImgDaoImpl {
          {static} - LOGGER : Logger
          + RecognizedImgDaoImpl()
          + create()
          + read()
          + update()
          + delete()
      }
    }
  }
  

  package by.khomenko.training.finaltask05.dao {
    package by.khomenko.training.finaltask05.dao.mysql {
      class SettingDaoImpl {
          {static} - LOGGER : Logger
          + SettingDaoImpl()
          + create()
          + read()
          + read()
          + update()
          + delete()
      }
    }
  }
  

  package by.khomenko.training.finaltask05.dao {
    package by.khomenko.training.finaltask05.dao.mysql {
      class UserDaoImpl {
          {static} - LOGGER : Logger
          + UserDaoImpl()
          + create()
          + read()
          + update()
          + updateUserName()
          + updateUserPass()
          + updateUserAvatar()
          + delete()
          + read()
          + readAllNotInBlacklist()
          + readAllInBlacklist()
          + isUserExist()
          + increaseUserLevel()
      }
    }
  }
  

  BaseDaoImpl -up-|> Dao
  BlackListDaoImpl -up-|> BlackListDao
  BlackListDaoImpl -up-|> BaseDaoImpl
  CategoryDaoImpl -up-|> CategoryDao
  CategoryDaoImpl -up-|> BaseDaoImpl
  FavoriteDaoImpl -up-|> FavoriteDao
  FavoriteDaoImpl -up-|> BaseDaoImpl
  ImageDaoImpl -up-|> ImageDao
  ImageDaoImpl -up-|> BaseDaoImpl
  RecognizedImgDaoImpl -up-|> RecognizedImgDao
  RecognizedImgDaoImpl -up-|> BaseDaoImpl
  SettingDaoImpl -up-|> SettingDao
  SettingDaoImpl -up-|> BaseDaoImpl
  UserDaoImpl -up-|> UserDao
  UserDaoImpl -up-|> BaseDaoImpl


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
